<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="@+id/p1LongField"
        app:layout_constraintTop_toBottomOf="@+id/p2LongField" />

    <EditText
        android:id="@+id/p2LongField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/p2Long"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/p1LongField"
        app:layout_constraintStart_toStartOf="@+id/p1LongField"
        app:layout_constraintTop_toBottomOf="@+id/p1LongField" />

    <EditText
        android:id="@+id/p2LatField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/p2Lat"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/p1LatField"
        app:layout_constraintStart_toStartOf="@+id/p1LatField"
        app:layout_constraintTop_toBottomOf="@+id/p1LatField" />

    <EditText
        android:id="@+id/p1LongField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/p1Long"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p1LatField"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/p1LatField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/p1Lat"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/p1LongField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@+id/p1LatField"
        app:layout_constraintTop_toBottomOf="@+id/p2LatField" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emptyDistance"
        app:layout_constraintEnd_toEndOf="@+id/p1LongField"
        app:layout_constraintStart_toStartOf="@+id/p1LatField"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <TextView
        android:id="@+id/bearingLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emptyBearing"
        app:layout_constraintEnd_toEndOf="@+id/p1LongField"
        app:layout_constraintStart_toStartOf="@+id/p1LatField"
        app:layout_constraintTop_toBottomOf="@+id/distanceLabel" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bearingLabel"
        app:layout_constraintStart_toEndOf="@+id/searchLabel" />

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/searchPrompt"
        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/bearingLabel"
        app:layout_constraintTop_toTopOf="@+id/searchButton" />

</android.support.constraint.ConstraintLayout>